--- a/plugin.xml
+++ b/plugin.xml
@@ -11,7 +11,7 @@
   </js-module>
   <preference name="APPKEY"  />
   <preference name="APPSECRET"  />
-  
+
   <platform name="ios">
     <config-file parent="/*" target="config.xml">
       <feature name="AliyunPullNotification">
@@ -24,7 +24,7 @@
     <source-file src="src/ios/libs/AlicloudUtils.framework" framework="true" />
     <source-file src="src/ios/libs/UTDID.framework" framework="true" />
     <source-file src="src/ios/libs/UTMini.framework" framework="true" />
-    
+
     <framework src="libz.tbd" />
     <framework src="libresolv.tbd"  />
     <framework src="CoreTelephony.framework"  />
@@ -34,7 +34,7 @@
   <platform name="android">
     <config-file parent="/*" target="res/xml/config.xml">
       <feature name="AliyunPullNotification">
-        <param name="android-package" value="AliyunPullNotification" />
+        <param name="android-package" value="org.apache.cordova.aliyunpullnotification.AliyunPullNotification" />
       </feature>
     </config-file>
     <config-file parent="/*" target="AndroidManifest.xml">
@@ -46,8 +46,8 @@
       <permission
           android:name="${applicationId}.permission.C2D_MESSAGE"
           android:protectionLevel="signature" />
-      
-      
+
+
       <!--阿里移动推送相关权限-->
       <!--Android 6.0版本可去除，用于选举信息（通道复用）的同步-->
       <uses-permission android:name="android.permission.WRITE_SETTINGS" />
@@ -77,7 +77,7 @@
       <uses-permission android:name="android.permission.REORDER_TASKS" />
 
     </config-file>
-    
+
     <config-file parent="application" target="AndroidManifest.xml">
 
       <meta-data android:name="com.alibaba.app.appkey" android:value="$APPKEY"/>
@@ -86,64 +86,109 @@
       <!-- 请填写你自己的appSecret -->
 
 
-      <!-- 通道保持服务 -->
-      <service android:name="com.alibaba.sdk.android.push.ChannelService"
-               android:exported="true" android:process=":channel">
-        <intent-filter>
-          <action android:name="com.taobao.accs.intent.action.SERVICE"/>
-        </intent-filter>
-        <intent-filter>
-          <action android:name="org.agoo.android.intent.action.PING_V4" />
-          <category android:name="taobao" />
-        </intent-filter>
-      </service>
+      <!-- Push SDK 相关组件，required-->
       <!-- 消息接收服务 -->
-      <service android:name="com.alibaba.sdk.android.push.MsgService"
-               android:exported="false">
-        <intent-filter>
-          <action android:name="com.taobao.accs.intent.action.RECEIVE" />
-        </intent-filter>
+      <service
+        android:name="com.alibaba.sdk.android.push.MsgService"
+        android:exported="false">
         <intent-filter>
           <action android:name="com.alibaba.sdk.android.push.NOTIFY_ACTION" />
         </intent-filter>
       </service>
-      <!-- 消息接收增强服务（可提高通知/消息达到率）-->
-      <service android:name="com.alibaba.sdk.android.push.channel.TaobaoRecvService" android:exported="true">
+      <service android:name="com.alibaba.sdk.android.push.channel.CheckService"
+        android:process=":channel">
         <intent-filter>
-          <action android:name="org.android.agoo.client.MessageReceiverService"/>
+          <action android:name="com.alibaba.sdk.android.push.CHECK_SERVICE" />
         </intent-filter>
       </service>
-
-      <receiver android:name=".component.MyMessageReceiver">
+      <service android:name="com.taobao.accs.ChannelService"
+        android:exported="true" android:process=":channel">
         <intent-filter>
-          <action android:name="com.alibaba.push2.action.NOTIFICATION_OPENED"/>
+          <action android:name="com.taobao.accs.intent.action.SERVICE"/>
         </intent-filter>
+      </service>
+      <service
+        android:name="com.taobao.accs.ChannelService$KernelService"
+        android:exported="false"
+        android:process=":channel" >
+      </service>
+      <service android:name="com.taobao.accs.data.MsgDistributeService"
+        android:exported="true">
         <intent-filter>
-          <action android:name="com.alibaba.push2.action.NOTIFICATION_REMOVED"/>
+          <action android:name="com.taobao.accs.intent.action.RECEIVE" />
         </intent-filter>
-        <intent-filter>
-          <action android:name="com.taobao.accs.intent.action.COMMAND" />
-        </intent-filter>
-        <intent-filter>
-          <action android:name="com.taobao.taobao.intent.action.COMMAND" />
-        </intent-filter>
-        <intent-filter>
-          <action android:name="com.alibaba.sdk.android.push.RECEIVE" />
-        </intent-filter>
-        <intent-filter>
-          <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
-        </intent-filter>
-        <intent-filter>
-          <action android:name="android.intent.action.USER_PRESENT" />
-        </intent-filter>
+      </service>
+      <receiver android:name="com.taobao.accs.EventReceiver"
+        android:process=":channel">
         <intent-filter>
           <action android:name="android.intent.action.BOOT_COMPLETED"/>
+        </intent-filter>
+        <intent-filter>
+          <action android:name="android.net.conn.CONNECTIVITY_CHANGE"/>
         </intent-filter>
         <intent-filter>
           <action android:name="android.intent.action.PACKAGE_REMOVED"/>
           <data android:scheme="package"/>
         </intent-filter>
+        <intent-filter>
+          <action android:name="android.intent.action.USER_PRESENT"/>
+        </intent-filter>
       </receiver>
+      <receiver android:name="com.taobao.accs.ServiceReceiver"
+        android:process=":channel">
+        <intent-filter>
+          <action android:name="com.taobao.accs.intent.action.COMMAND"/>
+        </intent-filter>
+        <intent-filter>
+          <action android:name="com.taobao.accs.intent.action.START_FROM_AGOO"/>
+        </intent-filter>
+      </receiver>
+      <service android:name="org.android.agoo.accs.AgooService"
+        android:exported="true" >
+        <intent-filter>
+          <action android:name="com.taobao.accs.intent.action.RECEIVE" />
+        </intent-filter>
+      </service>
+      <service android:name="com.alibaba.sdk.android.push.AliyunPushIntentService"
+        android:exported="true"
+        >
+        <intent-filter>
+          <action android:name="org.agoo.android.intent.action.RECEIVE" />
+        </intent-filter>
+      </service>
+      <receiver
+        android:name="com.taobao.agoo.AgooCommondReceiver"
+        android:process=":channel"
+        android:exported="true" >
+        <intent-filter>
+          <action android:name="${applicationId}.intent.action.COMMAND" />
+        </intent-filter>
+        <intent-filter>
+          <action android:name="android.intent.action.PACKAGE_REMOVED" />
+          <data android:scheme="package" />
+        </intent-filter>
+      </receiver>
+      <service
+        android:name="com.alibaba.sdk.android.push.channel.TaobaoRecvService"
+        android:exported="true"
+        android:process=":channel">
+        <intent-filter>
+          <action android:name="org.android.agoo.client.MessageReceiverService" />
+        </intent-filter>
+      </service>
+      <!-- V3.0.7及以上版本需配置 -->
+      <service android:name="com.alibaba.sdk.android.push.channel.KeepChannelService"
+        android:permission="android.permission.BIND_JOB_SERVICE"
+        android:process=":channel" />
+      <receiver android:name="com.alibaba.sdk.android.push.SystemEventReceiver"
+        android:process=":channel">
+        <intent-filter>
+          <action android:name="android.intent.action.MEDIA_MOUNTED"/>
+          <action android:name="android.intent.action.ACTION_POWER_CONNECTED"/>
+          <action android:name="android.intent.action.ACTION_POWER_DISCONNECTED"/>
+        </intent-filter>
+      </receiver>
+      <!-- V3.0.9及以上版本需配置 -->
 
 
     </config-file>
@@ -157,7 +202,16 @@
     <source-file src="src/android/libs/alicloud-android-push-sdk-3.0.11.jar" target-dir="libs"/>
     <source-file src="src/android/libs/alicloud-android-ut-5.1.0.jar" target-dir="libs"/>
     <source-file src="src/android/libs/utdid4all-1.1.5.3_proguard.jar" target-dir="libs"/>
-    
-    <source-file src="src/android/AliyunPullNotification.java" target-dir="src/AliyunPullNotification" />
+
+    <source-file src="src/android/AliyunPullNotification.java" target-dir="src/org/apache/cordova/aliyunpullnotification" />
+    <source-file src="src/android/MyMessageReceiver.java" target-dir="src/org/apache/cordova/aliyunpullnotification" />
+  </platform>
+  <!-- browser -->
+  <platform name="browser">
+    <config-file target="config.xml" parent="/*">
+      <feature name="AliyunPullNotification">
+        <param name="browser-package" value="AliyunPullNotification" />
+      </feature>
+    </config-file>
   </platform>
 </plugin>
